- added GET /order/{orderId} endpoint - shows order's details; - updating documentation.
