# src/main/java/ru/vsu/csf/asashina/cinemaback/controllers/OrderController.java
@@ -3,12 +3,10 @@ package ru.vsu.csf.asashina.cinemaback.controllers;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import ru.vsu.csf.asashina.cinemaback.models.request.ChosenSeatsRequest;
 import ru.vsu.csf.asashina.cinemaback.services.OrderService;
+import ru.vsu.csf.asashina.cinemaback.services.TicketService;
 
 import java.util.Map;
 
@@ -22,12 +20,19 @@ public class OrderController {
     private static final String ORDER_ID = "orderId";
 
     private final OrderService orderService;
+    private final TicketService ticketService;
 
-    @PostMapping()
+    @PostMapping
     public ResponseEntity<?> bookChosenSeat(@RequestBody ChosenSeatsRequest request,
                                             Authentication authentication) {
         return ResponseBuilder.build(OK,
                 Map.of(ORDER_ID, orderService.bookSeatsBeforeProceeding(request, authentication))
         );
+    }
+
+    @GetMapping("/{orderId}")
+    public ResponseEntity<?> getOrderDetails(@PathVariable("orderId") String orderId,
+                                             Authentication authentication) {
+        return ResponseBuilder.build(OK, ticketService.getTicketDetails(orderId, authentication));
     }
 }
